# ndreg

./: .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  Preprocessor.py  README.md  Registerer.py  Registration package test.ipynb  computing fiducial error.ipynb  gif.ipynb  image_processing_demo.ipynb  n_way_registration.ipynb  ndreg demo -- real data.ipynb  ndreg demo notebook.ipynb  ndreg_demo.ipynb  ndreg_demo_real_data.ipynb  preprocess.ipynb  preprocess.py  preprocessor.py  registerer.py  registration.ipynb  requirements.txt  sample_displacement_field.txt  setup.py  setup.py.in
docs/: Makefile  conf.py  index.rst  make.bat  ndreg.rst  preprocessor.rst  registerer.rst  util.rst
ndreg/: CMakeLists.txt  __init__.py  __version__.py  itkCommandLineArgumentParser.h  itkMetamorphosisImageRegistrationMethodv4.h  itkMetamorphosisImageRegistrationMethodv4.hxx  itkTimeVaryingVelocityFieldSemiLagrangianIntegrationImageFilter.h  itkTimeVaryingVelocityFieldSemiLagrangianIntegrationImageFilter.hxx  itkTimeVaryingVelocityFieldSemiLagrangianTransform.h  itkTimeVaryingVelocityFieldSemiLagrangianTransform.hxx  itkWrapExtrapolateImageFunction.h  landmarks.py  lddmm.py  metamorphosis.cxx  ndreg.py  plotter.py  preprocessor.py  registerer.py  test_boss_ndreg.py  util.py  vis.py
scripts/: correct_colm_grid.py  correct_lavision_bias.py  register_brain.py
tests/: test_preprocessor.py
tests/testlib/: testcase.py
